# hyper-lrrnn

./: .gitignore  README.md  pyproject.toml
hyper_lrrnn/rnn/: __init__.py  experimental.py  full_rank.py  low_rank.py  mixture_low_rank.py
hyper_lrrnn/tasks/: dm.py
hyper_lrrnn/training/: loss.py  regularizer.py  trainer.py  utils.py
scripts/approx_rnn/: generate_dataset.py  test_mixture.py
scripts/gen_rnn/: train_generator.py  train_generator_subsamp.py
scripts/plots/: gen_rnn_eval.py  multi_dm_resampling.py  multi_dm_task.py  raw_weight_pca.py  rnn_eval_all_tasks.py  rnn_eval_sweep.py
scripts/train_rnn/: distill_mixture.py  ray_test_compressibility.py  ray_train_rnn.py  resample_analysis.py  test_compressibility.py  train_rnn.py
scripts/train_rnn/config/: compress.yaml  config.yaml  distill.yaml
scripts/train_rnn/config/model/: fixed_seed_mixture.yaml  full_rank.yaml  full_rank_readout.yaml  low_rank.yaml  low_rank_readout.yaml  mixture_low_rank.yaml  mixture_low_rank_readout.yaml  trainable_mixture.yaml
scripts/train_rnn/config/task/: multi_dm2_a1.yaml  multi_dm2_a2.yaml  multi_dm2_ad.yaml  multi_dm2_as.yaml  multi_dm2_f1.yaml  multi_dm2_f2.yaml  multi_dm2_fd.yaml  multi_dm2_fs.yaml  multi_dm2_m1.yaml  multi_dm2_m2.yaml  multi_dm2_md.yaml  multi_dm2_ms.yaml  multi_dm_i1.yaml  multi_dm_i2.yaml  multi_dm_id.yaml  multi_dm_is.yaml  multi_dm_m1.yaml  multi_dm_m2.yaml  multi_dm_md.yaml  multi_dm_ms.yaml  multi_dm_t1.yaml  multi_dm_t2.yaml  multi_dm_td.yaml  multi_dm_ts.yaml
